objects/AW_FNARisk__c.object
<CustomObject>
    <fields>
        <fullName>AW_FNA__c</fullName>
        <description>The Related FNA</description>
        <label>FNA</label>
        <referenceTo>AW_FNA__c</referenceTo>
        <relationshipLabel>FNA Risks</relationshipLabel>
        <relationshipName>FNA_Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AW_LastUpdatedDatefromSource__c</fullName>
        <description>Last Date of Update</description>
        <label>Last Updated Date From Source</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Need__c</fullName>
        <description>The needed amount</description>
        <label>Need</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Provision__c</fullName>
        <description>The Provisioned Amount</description>
        <label>Provision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Recommend__c</fullName>
        <description>The Recommended Amount</description>
        <label>Recommend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>atWork</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Avalon</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>BPNP</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_TF_Source_System_ID__c</fullName>
        <description>External Source ID (TF)</description>
        <externalId>true</externalId>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if updated by MuleSoft</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <label>FNA Risk</label>
    <nameField>
        <label>FNA Risk Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FNA Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>